// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form> renders 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          false,
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`<Form> when {attributes} 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          false,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                Object {
                  "color": "#9b9b9b",
                },
                Object {},
              ]
            }
          >
            username
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 12,
                  "lineHeight": 17,
                },
                Object {
                  "color": "#9b9b9b",
                },
                Object {
                  "color": "#ef5160",
                },
              ]
            }
          >
            required
          </Text>
        </View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={true}
          editable={true}
          keyboardType="default"
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#9b9b9b"
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "borderRadius": 2.5,
                "borderWidth": 1,
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontSize": 16,
                "fontWeight": "400",
                "paddingHorizontal": 5,
                "paddingVertical": 7.5,
                "width": "100%",
              },
              false,
              false,
              Object {
                "borderColor": "#ef5160",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
              "overflow": "hidden",
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                Object {
                  "color": "#9b9b9b",
                },
                Object {},
              ]
            }
          >
            role
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "borderRadius": 2.5,
                "borderWidth": 1,
                "paddingRight": 5,
                "width": "100%",
              },
              undefined,
              false,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                  "height": "auto",
                },
                false,
              ]
            }
          >
            <RCTPicker
              items={
                Array [
                  Object {
                    "label": "frontend",
                    "textColor": undefined,
                    "value": "frontend",
                  },
                  Object {
                    "label": "backend",
                    "textColor": undefined,
                    "value": "backend",
                  },
                  Object {
                    "label": "fullstack",
                    "textColor": undefined,
                    "value": "fullstack",
                  },
                ]
              }
              onChange={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              selectedIndex={2}
              style={
                Array [
                  Object {
                    "height": 216,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                Object {
                  "color": "#9b9b9b",
                },
                Object {},
              ]
            }
          >
            mail
          </Text>
        </View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={true}
          editable={true}
          keyboardType="url"
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#9b9b9b"
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "borderRadius": 2.5,
                "borderWidth": 1,
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontSize": 16,
                "fontWeight": "400",
                "paddingHorizontal": 5,
                "paddingVertical": 7.5,
                "width": "100%",
              },
              false,
              false,
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                Object {
                  "color": "#9b9b9b",
                },
                Object {},
              ]
            }
          >
            bio
          </Text>
        </View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={true}
          editable={true}
          keyboardType="default"
          multiline={true}
          numberOfLines={4}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#9b9b9b"
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "borderRadius": 2.5,
                "borderWidth": 1,
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontSize": 16,
                "fontWeight": "400",
                "paddingHorizontal": 5,
                "paddingVertical": 7.5,
                "width": "100%",
              },
              false,
              false,
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "row",
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#e0e0e0",
                "borderRadius": 3,
                "height": 60,
                "width": 60,
              },
            ]
          }
        >
          <Image
            onLoad={[Function]}
            source={
              Object {
                "uri": "http://soyjavi.com/assets/images/soyjavi.jpg",
              }
            }
            style={
              Object {
                "backgroundColor": "#e0e0e0",
                "borderRadius": 3,
                "height": 60,
                "width": 60,
              }
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "marginLeft": 10,
                },
              ],
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 14,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#9b9b9b",
                  },
                  Object {},
                ]
              }
            >
              avatar
            </Text>
          </View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            defaultValue="http://soyjavi.com/assets/images/soyjavi.jpg"
            editable={true}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#9b9b9b"
            style={
              Array [
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "paddingHorizontal": 5,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value="http://soyjavi.com/assets/images/soyjavi.jpg"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "height": 44,
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 24,
              },
              Object {
                "color": "#9b9b9b",
              },
              Object {
                "marginRight": 10,
              },
            ]
          }
        >
          isPublic
        </Text>
        <RCTSwitch
          activeThumbColor="#bdbdbd"
          activeTrackColor="#e0e0e0"
          disabled={false}
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onValueChange={[Function]}
          style={
            Array [
              Object {
                "height": 31,
                "width": 51,
              },
              Object {
                "height": 24,
              },
            ]
          }
          value={false}
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignContent": "flex-start",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
              "width": "100%",
            },
            Object {
              "borderColor": "#e0e0e0",
              "borderRadius": 2.5,
              "borderWidth": 1,
              "marginBottom": 16,
              "paddingHorizontal": 10,
              "paddingTop": 10,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 18,
              },
              false,
              Object {
                "marginBottom": 10,
                "minWidth": "100%",
              },
            ]
          }
        >
          Social Networks
        </Text>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 14,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#9b9b9b",
                  },
                  Object {},
                ]
              }
            >
              twitter
            </Text>
          </View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#9b9b9b"
            style={
              Array [
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "paddingHorizontal": 5,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 14,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#9b9b9b",
                  },
                  Object {},
                ]
              }
            >
              facebook
            </Text>
          </View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#9b9b9b"
            style={
              Array [
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "paddingHorizontal": 5,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 14,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#9b9b9b",
                  },
                  Object {},
                ]
              }
            >
              github
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 12,
                    "lineHeight": 17,
                  },
                  Object {
                    "color": "#9b9b9b",
                  },
                  Object {
                    "color": "#ef5160",
                  },
                ]
              }
            >
              required
            </Text>
          </View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#9b9b9b"
            style={
              Array [
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "paddingHorizontal": 5,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                Object {
                  "borderColor": "#ef5160",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`<Form> when {color} 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          false,
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`<Form> when {data} 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          false,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                Object {
                  "color": "#9b9b9b",
                },
                Object {},
              ]
            }
          >
            username
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 12,
                  "lineHeight": 17,
                },
                Object {
                  "color": "#9b9b9b",
                },
                Object {
                  "color": "#ef5160",
                },
              ]
            }
          >
            required
          </Text>
        </View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={true}
          editable={true}
          keyboardType="default"
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#9b9b9b"
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "borderRadius": 2.5,
                "borderWidth": 1,
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontSize": 16,
                "fontWeight": "400",
                "paddingHorizontal": 5,
                "paddingVertical": 7.5,
                "width": "100%",
              },
              false,
              false,
              Object {
                "borderColor": "#ef5160",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
              "overflow": "hidden",
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                Object {
                  "color": "#9b9b9b",
                },
                Object {},
              ]
            }
          >
            role
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "borderRadius": 2.5,
                "borderWidth": 1,
                "paddingRight": 5,
                "width": "100%",
              },
              undefined,
              false,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                  "height": "auto",
                },
                false,
              ]
            }
          >
            <RCTPicker
              items={
                Array [
                  Object {
                    "label": "frontend",
                    "textColor": undefined,
                    "value": "frontend",
                  },
                  Object {
                    "label": "backend",
                    "textColor": undefined,
                    "value": "backend",
                  },
                  Object {
                    "label": "fullstack",
                    "textColor": undefined,
                    "value": "fullstack",
                  },
                ]
              }
              onChange={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              selectedIndex={2}
              style={
                Array [
                  Object {
                    "height": 216,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "width": "49%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                Object {
                  "color": "#9b9b9b",
                },
                Object {},
              ]
            }
          >
            mail
          </Text>
        </View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={true}
          editable={true}
          keyboardType="url"
          multiline={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#9b9b9b"
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "borderRadius": 2.5,
                "borderWidth": 1,
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontSize": 16,
                "fontWeight": "400",
                "paddingHorizontal": 5,
                "paddingVertical": 7.5,
                "width": "100%",
              },
              false,
              false,
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontWeight": "400",
                  "textAlignVertical": "center",
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 24,
                },
                Object {
                  "color": "#9b9b9b",
                },
                Object {},
              ]
            }
          >
            bio
          </Text>
        </View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={true}
          editable={true}
          keyboardType="default"
          multiline={true}
          numberOfLines={4}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholderTextColor="#9b9b9b"
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#e0e0e0",
                "borderRadius": 2.5,
                "borderWidth": 1,
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontSize": 16,
                "fontWeight": "400",
                "paddingHorizontal": 5,
                "paddingVertical": 7.5,
                "width": "100%",
              },
              false,
              false,
              undefined,
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "row",
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#F5F5F6",
                "justifyContent": "center",
              },
              Object {
                "backgroundColor": "#e0e0e0",
                "borderRadius": 3,
                "height": 60,
                "width": 60,
              },
            ]
          }
        >
          <Image
            onLoad={[Function]}
            source={
              Object {
                "uri": "http://soyjavi.com/assets/images/soyjavi.jpg",
              }
            }
            style={
              Object {
                "backgroundColor": "#e0e0e0",
                "borderRadius": 3,
                "height": 60,
                "width": 60,
              }
            }
          />
          <ActivityIndicator
            animating={true}
            color="white"
            hidesWhenStopped={true}
            size="large"
            style={
              Array [
                Object {
                  "position": "absolute",
                },
                false,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "marginLeft": 10,
                },
              ],
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 14,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#9b9b9b",
                  },
                  Object {},
                ]
              }
            >
              avatar
            </Text>
          </View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            defaultValue="http://soyjavi.com/assets/images/soyjavi.jpg"
            editable={true}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#9b9b9b"
            style={
              Array [
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "paddingHorizontal": 5,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value="http://soyjavi.com/assets/images/soyjavi.jpg"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "height": 44,
              "marginBottom": 10,
            },
            Object {
              "minWidth": "100%",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 24,
              },
              Object {
                "color": "#9b9b9b",
              },
              Object {
                "marginRight": 10,
              },
            ]
          }
        >
          isPublic
        </Text>
        <RCTSwitch
          activeThumbColor="#bdbdbd"
          activeTrackColor="#e0e0e0"
          disabled={false}
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onValueChange={[Function]}
          style={
            Array [
              Object {
                "height": 31,
                "width": 51,
              },
              Object {
                "height": 24,
              },
            ]
          }
          value={false}
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignContent": "flex-start",
              "display": "flex",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
              "width": "100%",
            },
            Object {
              "borderColor": "#e0e0e0",
              "borderRadius": 2.5,
              "borderWidth": 1,
              "marginBottom": 16,
              "paddingHorizontal": 10,
              "paddingTop": 10,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontFamily": undefined,
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 18,
              },
              false,
              Object {
                "marginBottom": 10,
                "minWidth": "100%",
              },
            ]
          }
        >
          Social Networks
        </Text>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 14,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#9b9b9b",
                  },
                  Object {},
                ]
              }
            >
              twitter
            </Text>
          </View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#9b9b9b"
            style={
              Array [
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "paddingHorizontal": 5,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 14,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#9b9b9b",
                  },
                  Object {},
                ]
              }
            >
              facebook
            </Text>
          </View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#9b9b9b"
            style={
              Array [
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "paddingHorizontal": 5,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                undefined,
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 10,
              },
              Object {
                "width": "32%",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 14,
                    "lineHeight": 24,
                  },
                  Object {
                    "color": "#9b9b9b",
                  },
                  Object {},
                ]
              }
            >
              github
            </Text>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#4a4a4a",
                    "fontFamily": undefined,
                    "fontWeight": "400",
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 12,
                    "lineHeight": 17,
                  },
                  Object {
                    "color": "#9b9b9b",
                  },
                  Object {
                    "color": "#ef5160",
                  },
                ]
              }
            >
              required
            </Text>
          </View>
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="#9b9b9b"
            style={
              Array [
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 2.5,
                  "borderWidth": 1,
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                  "fontSize": 16,
                  "fontWeight": "400",
                  "paddingHorizontal": 5,
                  "paddingVertical": 7.5,
                  "width": "100%",
                },
                false,
                false,
                Object {
                  "borderColor": "#ef5160",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`<Form> when {onChange} 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          false,
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`<Form> when {onValid} 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          false,
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`<Form> when {style} 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "rgba(0,255,0,0.25)",
      "padding": 20,
    }
  }
>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          false,
        ]
      }
    />
  </View>
</RCTScrollView>
`;

exports[`<Form> when {title} 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-between",
            "width": "100%",
          },
          false,
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontFamily": undefined,
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 18,
            },
            false,
            Object {
              "marginBottom": 10,
              "minWidth": "100%",
            },
          ]
        }
      >
        Hello World
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
